--- a/styleW.css
+++ b/styleW.css
@@ -10,7 +10,8 @@ html {
 
 body {
  
-    background-image : linear-gradient(250deg, rgb(163, 232, 245) 0%, rgb(145, 138, 247) 40%, rgb(55, 42, 241) 100%);
+    background-image : linear-gradient(250deg, rgb(163, 232, 245) 0%, rgb(145, 138, 247) 40%, rgb(55, 42, 241) 100%); 
+
 
     display: block;
 }
@@ -519,3 +520,82 @@ footer{
     }
     
      */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     /* CSS pour les annonces*/
+
+     div{
+      position: block;
+     }
+     .Structure {
+      position: relative;
+      background-color: rgba(255, 255, 255, 0.5);
+      width: 40%;
+      margin: 20px;
+
+      border-radius: 5ch;
+    }
+ 
+    .offre{
+
+      
+      margin: 20px;
+      /* background-color : rgb(110, 110, 202); */
+      display:flex;
+      justify-content:left;
+
+      position: absolute;
+      
+    }
+
+     .imgStructure{
+      /* background-color: white; */
+      width: 30%;
+      margin: 20px;  
+    
+    }
+
+    .imageDetaille{
+      max-width: 100%;
+    } 
+
+    .test{
+      margin: 20px;
+      /* background-color:purple; */
+      display:flex;
+      justify-content:space-between;
+    }
+
+    .nomStructure{
+      /* background-color: yellow; */
+      margin: 20px;
+      width: 60%;
+      position: relative;
+    }
+
+    .infoStructure{
+      /* background-color: red; */
+      margin: 20px;
+      /* border-style: solid;
+      border-color: rgba(26, 20, 18, 0.616); */
+    } 
+
+
+    .offre > p {
+      color: rgba(189, 39, 39, 0.877)
+    }
